--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
     "react-webcam": "^7.2.0",
+    "recharts": "^2.9.0",
     "tailwindcss": "^3.3.5",
     "web-vitals": "^2.1.4"
   },
